--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
 - 3.8
 - 3.7
 - 3.6
-install: pip install -U tox-travis
+install:
+    pip install -U importlib_metadata
+    pip install -U tox-travis
 script: tox
 deploy:
   provider: pypi
