--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ python:
 - 3.7
 - 3.6
 install:
-    pip install -U importlib_metadata
-    pip install -U tox-travis
+    - pip install -U importlib_metadata
+    - pip install -U tox-travis
 script: tox
 deploy:
   provider: pypi
